<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_transaction"
          android:icon="@drawable/ic_compare_arrows_black_24dp"
          android:title="Transactions"
          app:showAsAction="always"/>

    <item
            android:id="@+id/menu_theme"
            android:title="@string/theme"
            app:showAsAction="never">

            <menu>
                <item android:id="@+id/menu_dark"
                      android:title="Dark"/>
                <item android:id="@+id/menu_light"
                      android:title="Light"/>
            </menu>
    </item>
    <item
            android:id="@+id/menu_Manage_Categories"
            android:title="@string/manage_categories"
            app:showAsAction="never"/>
    <item
            android:id="@+id/menu_adjust_balance"
            android:title="@string/adjust_balance"
            app:showAsAction="never"/>
</menu>