<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        android:id="@+id/root"
        android:theme="@style/AppTheme">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            android:elevation="4dp"/>
    <FrameLayout
            android:padding="10dp"
            android:paddingTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/dummy_text"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_CurrentMonth"/>
        <TextView
                android:text="@string/prev_month_char"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_PreviusMonth"
                android:paddingStart="24dp"/>
        <TextView
                android:text="@string/next_month_char"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_NextMonth" android:paddingEnd="24dp"/>
    </FrameLayout>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/current_balance_layout"
            android:background="#222"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">

        <TextView
                android:text="@string/dummy_text"
                android:textSize="16sp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/current_balance_textView"
                android:gravity="center"/>
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/main_category_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
</LinearLayout>